--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -65,7 +65,8 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area-subp bg-img bg-overlay"
+        style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -86,7 +87,7 @@
 
     <!-- Summary -->
     <section class="about-me-summ section-padding-80-0 clearfix">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12 sect-title">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
@@ -100,8 +101,8 @@
                         <div class="summ-icon">
                             <i class="fa-solid fa-cake-candles"></i>
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Birthday</h3>
-                        <h4 style="font-size: 15px;">04 March 2000</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder;">Birthday</h3>
+                        <h4 style="font-size: 13px;">04 March 2000</h4>
                     </div>
                 </div>
 
@@ -110,8 +111,8 @@
                         <div class="summ-icon">
                             <i class="fa-solid fa-earth-asia"></i>
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Country</h3>
-                        <h4 style="font-size: 15px;">Singapore</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder;">Country</h3>
+                        <h4 style="font-size: 13px;">Singapore</h4>
                     </div>
                 </div>
 
@@ -120,27 +121,27 @@
                         <div class="summ-icon">
                             <i class="fa-solid fa-circle-user"></i>
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Age</h3>
-                        <h4 style="font-size: 15px;">24 years old</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder;">Age</h3>
+                        <h4 style="font-size: 13px;">24 years old</h4>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Highest Education</h3>
-                        <h4 style="font-size: 15px;">Poly Diploma (Diploma in IT)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder;">Highest Education</h3>
+                        <h4 style="font-size: 13px;">Poly Diploma (Diploma in IT)</h4>
                     </div>
                 </div>
 
                 <div class="col-md-8 col-lg-8 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Likes & Interests</h3>
+                        <h3 style="font-size: 18px; font-weight: bolder;">Likes & Interests</h3>
                         <h4 style="font-size: 15px;">Wayfinding Signage Designs, UI Designs, UX Design Research</h4>
                     </div>
                 </div>
@@ -151,18 +152,18 @@
 
     <!-- Timelines -->
     <section class="about-me-area bg-gray section-padding-80-0 clearfix">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h2 style="font-size: 36px">Timelines</h2>
+                        <h2 style="font-size: 35px">Timelines</h2>
                     </div>
                 </div>
 
                 <!-- Education -->
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px;"><u>Education</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; font-size: 36px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
@@ -172,7 +173,8 @@
                         <div class="period-date-edu">
                             2019 - 2022
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Diploma in Information Technology</h3>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Diploma in Information
+                            Technology</h3>
                         <h4 style="font-size: 15px;">Singapore Polytechnic (SP)</h4>
                         <p>Tertiary Education (2)</p>
                     </div>
@@ -183,7 +185,8 @@
                         <div class="period-date-edu">
                             2017 - 2018
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">NITEC in Information Technlogy</h3>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">NITEC in Information
+                            Technlogy</h3>
                         <h4 style="font-size: 15px;">Institute of Technical Education (ITE)</h4>
                         <p>Tertiary Education (1)</p>
                     </div>
@@ -194,9 +197,9 @@
                         <div class="period-date-edu">
                             2013 - 2016
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">N Levels</h3>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">N Levels</h3>
                         <h4 style="font-size: 15px;">Chua Chu Kang Secondary School</h4>
-                        <p>Secondary Education</p> <br>
+                        <p>Secondary Education</p>
                     </div>
                 </div>
 
@@ -205,7 +208,7 @@
                         <div class="period-date-edu">
                             2007 - 2012
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">PSLE</h3>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">PSLE</h3>
                         <h4 style="font-size: 15px;">Unity Primary School</h4>
                         <p>Primary Education</p>
                     </div>
@@ -217,7 +220,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards &
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards
+                                &
                                 Achievements</u></h2>
                     </div>
                 </div>
@@ -228,7 +232,7 @@
                         <div class="period-date-aa">
                             2023
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Singapore Armed Forces (SAF)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Base Sergeant Major Coin (Supply Base Central)
                             </p>
@@ -240,7 +244,7 @@
                         <div class="period-date-aa">
                             2019
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Graduated from ITE <br>
                                 - ITE Gold Course Medal/Graduation Ceremony <br>
@@ -255,7 +259,7 @@
                         <div class="period-date-aa">
                             2018
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Service Star Award (Gold) <br>
                                 - Director's List (Year 2) <br>
@@ -271,7 +275,7 @@
                         <div class="period-date-aa">
                             2017
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: justify;">
                                 - Director's List (Year 1) <br>
                                 - Edusave Character Award <br>
@@ -286,29 +290,30 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Experiences</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;">
+                            <u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <!-- <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
-                            Oct 2024
+                            Oct - Nov 2024
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Alphaeus Pte Ltd</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Alphaeus Pte Ltd</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - IT Desktop Support Engineer (Kyndryl)</b>
                             </p>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Dec 2022 - Jul 2024
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Singapore Armed Forces (SAF)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Supply Assistant (GE) (2) - SBC CP ASA <br> <b>Sep 2023 - Jul 2024</b><br>
                                 - Supply Assistant (GE) (1) - SBC CP GE Store - SBC CP ASA <br> <b>Dec 2022 - Sep
@@ -322,7 +327,7 @@
                         <div class="period-date-exp">
                             Oct 2021 - Feb 2022
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">HatchDev Asia</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">HatchDev Asia</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Front-End Developer/UX Designer - Full-Time/Final-Year Project
                             </p>
@@ -334,7 +339,7 @@
                         <div class="period-date-exp">
                             Mar 2021 - Aug 2021
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Housing & Development Board</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Housing & Development Board</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Intern, Information Services Group <br>
                             </p>
@@ -342,11 +347,11 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="period-date-exp">
                             Jan 2019 - Feb 2019
                         </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">TTS Group of Companies</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">TTS Group of Companies</h4>
                             <p style="font-size: 15px; text-align: justify;">
                                 - Public Transport Surveyor - Part-Time
                             </p>
@@ -358,11 +363,11 @@
 
 
     <section class="follow-area clearfix">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>Language Proficiency</h2>
+                        <h2 style="font-size: 30px">Language Proficiency</h2>
                     </div>
                 </div>
             </div>
@@ -393,11 +398,11 @@
             </div>
         </div>
         <br>
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="500ms">
-                        <h2>Programming Languages</h2>
+                        <h2 style="font-size: 30px">Programming Languages</h2>
                     </div>
                 </div>
             </div>
@@ -441,14 +446,15 @@
     </section>
 
     <footer class="footer-area">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
 
                         <div class="copywrite-text">
                             <p>
-                                &copy; <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
                             </p>
                         </div>
 
