--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -106,9 +106,6 @@
                                 title="LinkedIn">
                                 <div class="fa-brands fa-linkedin" style="font-size: 30px"></div>
                             </a>
-                            <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Email Me">
-                                <div class="fa-solid fa-envelope-open" style="font-size: 30px"></div>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -159,14 +156,42 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
+                    data-wow-delay="900ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
+                        <img src="https://i.imgur.com/wDvqKp1.png" alt>
                         <div class="hover-content">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
+                    data-wow-delay="1100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/2ZDDWFy.png" alt>
+                        <div class="hover-content">
+                            <h4>MyTransport.SG App Redesign</h4>
+                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/GlYFYka.png" alt="man-a22-mascot">
+                        <div class="hover-content">
+                            <h4>MAN A22 Lion Mascot Replication</h4>
+                            <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/GlYFYka.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -174,34 +199,6 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
                     data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt>
-                        <div class="hover-content">
-                            <h4>MyTransport.SG App Redesign</h4>
-                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
-                        <div class="hover-content">
-                            <h4>MAN A22 Lion Mascot Replication</h4>
-                            <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/kstN8gT.png" alt>
                         <div class="hover-content">
@@ -224,8 +221,8 @@
     </div>
 
 
-    <section class="about-me-area bg-gray section-padding-80-0 clearfix">
-        <div class="container">
+    <section class="about-me-area bg-gray section-padding-50 clearfix">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms"
@@ -255,25 +252,23 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="ui-icon">
                             <i class="fa-solid fa-pen-ruler"></i>
                         </div>
-                        <h4>User Interface (UI)<br>Designs</h4>
+                        <h4>User Interface (UI) Designs</h4>
                         <p>Involves designing attractive, practical and user-friendly interfaces.</p>
-                        <br>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="ux-icon">
                             <i class="fa-regular fa-face-smile-beam"></i>
                         </div>
                         <h4>User Experience (UX) Design Research</h4>
                         <p> Involves carefully studying the target users and each of their
                             needs.</p>
-                        <br>
                     </div>
                 </div>
             </div>
@@ -282,11 +277,11 @@
 
 
     <section class="follow-area clearfix">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2>Skills & Software Proficiency</h2>
+                        <h2 style="font-size: 30px">Skills & Software Proficiency</h2>
                     </div>
                 </div>
             </div>
@@ -363,7 +358,7 @@
     </section>
 
     <footer class="footer-area">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
@@ -388,8 +383,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </div
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
