--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-extension-1.css">
@@ -31,7 +31,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -65,7 +65,7 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area-subp bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -198,12 +198,12 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt="myts-app">
+                        <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
                         <div class="hover-content">
                             <h4>MyTransport.SG App Redesign</h4>
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -212,12 +212,12 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt="bus-rep">
+                        <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
                         <div class="hover-content">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -361,14 +361,15 @@
 
 
     <footer class="footer-area">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
 
                         <div class="copywrite-text">
                             <p>
-                                &copy; <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
                             </p>
                         </div>
 
