--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-extension-1.css">
@@ -34,7 +34,7 @@
 
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
-        <div class="container">
+        <div class="container container-xxl">
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -90,80 +90,109 @@
   </section>
 
 
-  <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-12 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-pen-to-square"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> A self-made handbook of how I explored different ways to
-              make the current Wayfinding system better.<br><br>
-              Also covered:<br>
-              - Design Improvements <br>
-              - Font and Color Palettes <br>
-              - Design Ideas Brainstorming
+  <section class="wbnrfz-summ clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="col-lg-12">
+          <div class="main-title">
+            <span>LTA's New Wayfinding System</span>
+            <h1>Experimenting Improvements of Current Wayfinding</h1>
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-list"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">Concepts & Replications</h4>
+        <div class="details_catagory_wrap">
+          <div class="col-sm-2 single_catagory ">
+            <span>Category</span>
+            <h4>Concepts & Replications</h4>
           </div>
-        </div>
-
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-calendar-days"></i>
+          <div class="col-sm-2 single_catagory">
+            <span>Project Year</span>
+            <h4>2024</h4>
+          </div>
+          <div class="col-sm-2 single_catagory">
+            <span>Share Project</span>
+            <div class="social_links">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                title="Facebook">
+                <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Train Delays Checker"
+                title="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                  class="fa-solid fa-link"></i>
+                <p class="clipboard-copied" style="font-size: 12px;"></p>
+              </a>
             </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2024</h4>
+          </div>
+          <div class="single_catagory">
+            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+              href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download><i
+                class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
+                  download>First Edition</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Second Edition</a></li> -->
+            </ul>
+            <a class="btn wbnrfz_btn"
+              href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
+                class="fa-solid fa-external-link"></i>&nbsp; View in Google
+              Drive</a>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Button Section -->
-    <div class="row">
-      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"
-          class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-external-link"></i>&nbsp; View in Google Drive</a>
-      </div>
-      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download
-          class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-download"></i>&nbsp; Download Handbook</a>
-      </div>
-    </div>
   </section>
 
-  </div>
-  </section>
+  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+                    <p style="text-align: center;">A self-made handbook of how I explored different ways and ideas to
+                      make the current Wayfinding system better. <br>
+
+                      Covered in this Handbook:<br>
+                      - Design Improvements <br>
+                      - Font and Color Palettes <br>
+                      - Design Ideas Brainstorming
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 
-  <section class="about-me-area bg-gray section-padding-screenS clearfix">
-    <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
-      <div class="portfolio-info">
-        <div class="portfolio-details-slider swiper">
-          <div class="swiper-wrapper align-items-center">
+            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+              <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
+                  class="img-fluid" alt="cover-page"></a>
+            </div>
 
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/sBOOEqY.png" alt="cover-page">
+            <div class="details_single_img">
+              <div class="row">
+                <div class="col-lg-6 col-md-6">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="swiper-pagination"></div>
         </div>
       </div>
     </div>
   </section>
+
 
 
   <footer class="footer-area">
@@ -183,7 +212,8 @@
               <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
               <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
               <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
+                  aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -198,10 +228,12 @@
 
   <script src="../js/jquery.min.js"></script>
 
-  <script src="../js/popper.min.js"></script>
-
-  <script src="../js/bootstrap.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
@@ -213,6 +245,8 @@
   <script src="../js/isotope.pkgd.min.js"></script>
 
   <script src="../js/portfolio-comp.js"></script>
+
+  <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
