--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="../img/core-img/favicon.png">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-extension-1.css">
@@ -34,11 +34,12 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
-                        <a class="nav-brand img-logo" href="../index.html"><img class="logo-img" src="../img/core-img/logo.png" alt></a>
+                        <a class="nav-brand img-logo" href="../index.html"><img class="logo-img"
+                                src="../img/core-img/logo.png" alt></a>
 
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -89,83 +90,104 @@
     </section>
 
 
-    <section class="about-me-summ section-padding-80-0 clearfix">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-12 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="summ-icon">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-                        <h4 style="font-size: 15px; font-weight: normal;">3 out of my many ideas and prototypes on how
-                            to enhance
-                            store/inventory tracking operations.
-                            (Details redacted for privacy)</h4>
+    <section class="wbnrfz-summ clearfix">
+        <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+            <div class="container">
+                <div class="col-lg-12">
+                    <div class="main-title">
+                        <span>Inventory Tracking Initiatives</span>
+                        <h1>Store Inventory Tracking </h1>
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-6 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="summ-icon">
-                            <i class="fa-solid fa-list"></i>
-                        </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-                        <h4 style="font-size: 15px; font-weight: normal;">Initiatives & Implementations</h4>
+                <div class="details_catagory_wrap">
+                    <div class="col-sm-3 single_catagory ">
+                        <span>Category</span>
+                        <h4>Initiatives & Implementations</h4>
                     </div>
-                </div>
+                    <div class="col-sm-2 single_catagory">
+                        <span>Project Duration</span>
+                        <h4>Feb 2023 - Jul 2024</h4>
+                    </div>
+                    <div class="col-sm-2 single_catagory">
+                        <span>Share Project</span>
+                        <div class="social_links">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/sit.html"
+                                title="Facebook">
+                                <i class="fa-brands fa-facebook"></i> </a>
+                            <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/sit.html&text= Store Inventory Tracking"
+                                title="X (Twitter)">
+                                <i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                                    class="fa-solid fa-link"></i>
+                                <p class="clipboard-copied" style="font-size: 12px;"></p>
+                            </a>
+                        </div>
+                    </div>
 
-                <div class="col-md-6 col-lg-6 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="summ-icon">
-                            <i class="fa-solid fa-calendar-days"></i>
-                        </div>
-                        <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-                        <h4 style="font-size: 15px; font-weight: normal;">Feb 2023 - Jul 2024</h4>
-                    </div>
                 </div>
             </div>
+
         </div>
-
-        <!-- Button Section -->
-        <!-- <div class="row">
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="#" class="btn pw-btn btn-2 mt-15" target="_blank">
-                    <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
-            </div>
-        </div> -->
         </div>
     </section>
 
-
-    <section class="about-me-area bg-gray section-padding-screenS clearfix">
-        <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
-            <div class="portfolio-info">
-                <div class="portfolio-details-slider swiper">
-                    <div class="swiper-wrapper align-items-center">
-
-                        <div class="swiper-slide">
-                            <img src="https://i.imgur.com/YgEWKR0.png" alt="compilation-ui">
+    <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+        <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="details_info">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-12">
+                                    <div class="info justify-content-center">
+                                        <p style="text-align: center;">3 out of my many ideas and prototypes on how
+                                            to enhance
+                                            store/inventory tracking operations.
+                                            (Details redacted for privacy)
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
-                        <div class="swiper-slide">
-                            <img src="https://i.imgur.com/y9XAe9A.png" alt="inventory-status-tracker">
+
+                        <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+                            <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><img
+                                    src="https://i.imgur.com/YgEWKR0.png" class="img-fluid" alt="cover-page"></a>
                         </div>
 
-                        <div class="swiper-slide">
-                            <img src="https://i.imgur.com/gYOpvWO.png" alt="items-tracking">
+                        <div class="details_single_img">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <a href="https://i.imgur.com/y9XAe9A.png" class="portfolio-img"><img
+                                                src="https://i.imgur.com/y9XAe9A.png" class="img-fluid"
+                                                alt="inventory-status-tracker"></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <a href="https://i.imgur.com/gYOpvWO.png" class="portfolio-img"><img
+                                                src="https://i.imgur.com/gYOpvWO.png" class="img-fluid"
+                                                alt="items-tracking"></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <a href="https://i.imgur.com/sKUoN2g.png" class="portfolio-img"><img
+                                                src="https://i.imgur.com/sKUoN2g.png" class="img-fluid"
+                                                alt="inventory-tracking"></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="swiper-slide">
-                            <img src="https://i.imgur.com/sKUoN2g.png" alt="inventory-tracking">
-                        </div>
-
                     </div>
-                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </div>
     </section>
+
 
 
     <footer class="footer-area">
@@ -176,7 +198,8 @@
 
                         <div class="copywrite-text">
                             <p>
-                                &copy; <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
                             </p>
                         </div>
 
@@ -218,6 +241,8 @@
     <script src="../js/isotope.pkgd.min.js"></script>
 
     <script src="../js/portfolio-comp.js"></script>
+
+    <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
