--- a/worksbynrfz/igra3.html
+++ b/worksbynrfz/igra3.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-extension-1.css">
@@ -34,11 +34,12 @@
 
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
-        <div class="container">
+        <div class="container container-xxl">
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
-            <a class="nav-brand img-logo" href="../index.html"><img class="logo-img" src="../img/core-img/logo.png" alt></a>
+            <a class="nav-brand img-logo" href="../index.html"><img class="logo-img" src="../img/core-img/logo.png"
+                alt></a>
 
             <div class="classy-navbar-toggler">
               <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -89,101 +90,105 @@
   </section>
 
 
-  <section class="about-me-summ section-padding-80-0 clearfix">
+  <section class="wbnrfz-summ clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="col-lg-12">
+          <div class="main-title">
+            <span>Infographic Project</span>
+            <h1>How To Use TimeTree Infographic</h1>
+          </div>
+        </div>
+
+        <div class="details_catagory_wrap">
+          <div class="col-sm-3 single_catagory ">
+            <span>Category</span>
+            <h4>Infographic Design</h4>
+          </div>
+          <div class="col-sm-3 single_catagory">
+            <span>Project Year</span>
+            <h4>2023</h4>
+          </div>
+          <div class="col-sm-3 single_catagory">
+            <span>Share Project</span>
+            <div class="social_links">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/igra3.html"
+                title="Facebook">
+                <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/igra3.html&text= How To Use TimeTree Infographic"
+                title="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                  class="fa-solid fa-link"></i>
+                <p class="clipboard-copied" style="font-size: 12px;"></p>
+              </a>
+            </div>
+          </div>
+          <div class="single_catagory">
+            <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
+            class="btn wbnrfz_btn" target="_blank"><i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+                    <p style="text-align: center;">TimeTree is a shared calendar app that makes it very easy
+                      to share and coordinate schedules. Great to
+                      monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+              <a href="https://i.imgur.com/vrY4q9w.png" class="portfolio-img"><img src="https://i.imgur.com/vrY4q9w.png"
+                  class="img-fluid" alt="cover-page"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer class="footer-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-12 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-pen-to-square"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> TimeTree is a shared calendar app that makes it very easy
-              to share and coordinate schedules. Great to
-              monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.</h4>
-          </div>
-        </div>
+        <div class="col-12">
+          <div class="footer-content d-flex align-items-center justify-content-between">
 
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-list"></i>
+            <div class="copywrite-text">
+              <p>
+                &copy;
+                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+              </p>
             </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">Infographic Design</h4>
-          </div>
-        </div>
 
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-calendar-days"></i>
+            <div class="social-info">
+              <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
+                  aria-hidden="true"></i></a>
             </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2023</h4>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Button Section -->
-    <div class="row">
-      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-          class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
-      </div>
-    </div>
-    </div>
-  </section>
-
-
-  <section class="about-me-area bg-gray section-padding-screenS clearfix">
-    <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
-      <div class="portfolio-info">
-        <div class="portfolio-details-slider swiper">
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/vrY4q9w.png alt="igra-tt">
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-    <footer class="footer-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="footer-content d-flex align-items-center justify-content-between">
-
-                        <div class="copywrite-text">
-                            <p>
-                                &copy;
-                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
-                            </p>
-                        </div>
-
-                        <div class="social-info">
-                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
@@ -207,6 +212,8 @@
   <script src="../js/isotope.pkgd.min.js"></script>
 
   <script src="../js/portfolio-comp.js"></script>
+
+  <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
