--- a/worksbynrfz/lta-pids.html
+++ b/worksbynrfz/lta-pids.html
@@ -2,182 +2,205 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="description" content>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>LTA Bus PIDS Redesign | WBN</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-  <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
+    <title>LTA Bus PIDS Redesign | WBN</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+    <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
-  <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/style-extension-1.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-extension-1.css">
 
-  <link rel="stylesheet" href="../css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="../css/glightbox.min.css">
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/glightbox.min.css">
 </head>
 
 <body>
 
-  <div id="preloader">
-    <div class="loader"></div>
-  </div>
-
-
-  <header class="header-area">
-
-    <div class="main-header-area">
-      <div class="classy-nav-container breakpoint-off">
-        <div class="container">
-
-          <nav class="classy-navbar justify-content-between" id="pwNav">
-
-            <a class="nav-brand img-logo" href="../index.html"><img class="logo-img" src="../img/core-img/logo.png" alt></a>
-
-            <div class="classy-navbar-toggler">
-              <span class="navbarToggler"><span></span><span></span><span></span></span>
-            </div>
-
-            <div class="classy-menu">
-
-              <div class="classycloseIcon">
-                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-              </div>
-
-              <div class="classynav">
-                <ul id="nav">
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="../about.html">About</a></li>
-                  <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
-                  <li><a href="../blog.html">Blog</a></li>
-
-                </ul>
-              </div>
-
-            </div>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </header>
-
-
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/0CvilmH.png)">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-          <div class="breadcrumb-content text-center">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb justify-content-center">
-                <li class="breadcrumb-item"><a href="../index.html"> Home</a>
-                </li>
-                <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
-                </li>
-              </ol>
-            </nav>
-            <h2 class="page-title">LTA Bus PIDS Redesign</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-12 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-pen-to-square"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> My take on the redesign of LTA's Bus Passenger
-              Information Display System (PIDS). <br><br>
-
-              <i class="bi-arrow-right-circle-fill"></i> Picture 1:
-              PIDS UI - UI showing the Next Stop (Top) and UI showing the Stop the Bus is currently at (Bottom) <br><br>
-
-              <i class="bi-arrow-right-circle-fill"></i> Picture 2:
-              PIDS UI - UI showing when the Bus Stopping Bell is pressed (Top) and UI showing the aftermath of it
-              (Bottom) <br><br>
-
-              <i class="bi-arrow-right-circle-fill"></i> Video:
-              PIDS UI - UI in action <br><br>
-            </h4>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-list"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">Concepts & Replications</h4>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-6 box-indiv">
-          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-            <div class="summ-icon">
-              <i class="fa-solid fa-calendar-days"></i>
-            </div>
-            <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2023</h4>
-          </div>
-        </div>
-      </div>
+    <div id="preloader">
+        <div class="loader"></div>
     </div>
 
-    <!-- Button Section -->
-    <!-- <div class="row">
-      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-          class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
-      </div>
-    </div> -->
-    </div>
-  </section>
 
+    <header class="header-area">
 
-  <section class="about-me-area bg-gray section-padding-screenS clearfix">
-    <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
-      <div class="portfolio-info">
-        <div class="portfolio-details-slider swiper">
-          <div class="swiper-wrapper align-items-center">
+        <div class="main-header-area">
+            <div class="classy-nav-container breakpoint-off">
+                <div class="container container-xxl">
 
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/0CvilmH.png" alt="compilation-pids">
+                    <nav class="classy-navbar justify-content-between" id="pwNav">
+
+                        <a class="nav-brand img-logo" href="../index.html"><img class="logo-img"
+                                src="../img/core-img/logo.png" alt></a>
+
+                        <div class="classy-navbar-toggler">
+                            <span class="navbarToggler"><span></span><span></span><span></span></span>
+                        </div>
+
+                        <div class="classy-menu">
+
+                            <div class="classycloseIcon">
+                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                            </div>
+
+                            <div class="classynav">
+                                <ul id="nav">
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../about.html">About</a></li>
+                                    <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
+                                    <li><a href="../blog.html">Blog</a></li>
+
+                                </ul>
+                            </div>
+
+                        </div>
+                    </nav>
+                </div>
             </div>
-
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/5EwPebe.png" alt="ui-next-arr">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/CDq64eu.png" alt="ui-next-stop">
-            </div>
-
-            <div class="swiper-slide">
-              <video width="100%" height="511" controls loop>
-                <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
-              </video>
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
         </div>
-      </div>
-    </div>
-  </section>
+    </header>
+
+
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/0CvilmH.png)">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="../index.html"> Home</a>
+                                </li>
+                                <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
+                                </li>
+                            </ol>
+                        </nav>
+                        <h2 class="page-title">LTA Bus PIDS Redesign</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="wbnrfz-summ clearfix">
+        <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+            <div class="container">
+                <div class="col-lg-12">
+                    <div class="main-title">
+                        <span>LTA's New Wayfinding System</span>
+                        <h1>LTA Bus PIDS Redesign </h1>
+                    </div>
+                </div>
+
+                <div class="details_catagory_wrap">
+                    <div class="col-sm-3 single_catagory ">
+                        <span>Category</span>
+                        <h4>Concepts & Replications</h4>
+                    </div>
+                    <div class="col-sm-2 single_catagory">
+                        <span>Project Year</span>
+                        <h4>2023</h4>
+                    </div>
+                    <div class="col-sm-2 single_catagory">
+                        <span>Share Project</span>
+                        <div class="social_links">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/lta-pids.html"
+                                title="Facebook">
+                                <i class="fa-brands fa-facebook"></i> </a>
+                            <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/lta-pids.html&text= LTA Bus PIDS Redesign"
+                                title="X (Twitter)">
+                                <i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                                    class="fa-solid fa-link"></i>
+                                <p class="clipboard-copied" style="font-size: 12px;"></p>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        </div>
+    </section>
+
+    <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+        <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="details_info">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-12">
+                                    <div class="info justify-content-center">
+                                        <p style="text-align: center;">My take on the redesign of LTA's Bus Passenger
+                                            Information Display System (PIDS). <br><br>
+
+                                            <i class="bi-arrow-right-circle-fill"></i> Cover Image:
+                                            UI Compilation <br><br>
+
+                                            <i class="bi-arrow-right-circle-fill"></i> Picture 1:
+                                            PIDS UI - UI showing the Next Stop (Top) and UI showing the Stop the Bus is
+                                            currently at (Bottom) <br><br>
+
+                                            <i class="bi-arrow-right-circle-fill"></i> Picture 2:
+                                            PIDS UI - UI showing when the Bus Stopping Bell is pressed (Top) and UI
+                                            showing the aftermath of it
+                                            (Bottom) <br><br>
+
+                                            <i class="bi-arrow-right-circle-fill"></i> Video:
+                                            PIDS UI - UI in action <br><br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+                            <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><img
+                                    src="https://i.imgur.com/0CvilmH.png" class="img-fluid" alt="cover-page"></a>
+                        </div>
+
+                        <div class="details_single_img">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <a href="https://i.imgur.com/5EwPebe.png" class="portfolio-img"><img
+                                                src="https://i.imgur.com/5EwPebe.png" class="img-fluid"
+                                                alt="ui-next-arr"></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <a href="https://i.imgur.com/CDq64eu.png" class="portfolio-img"><img
+                                                src="https://i.imgur.com/CDq64eu.png" class="img-fluid"
+                                                alt="ui-next-stop"></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="thumb">
+                                        <video width="100%" height="397px" controls loop>
+                                            <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <footer class="footer-area">
@@ -209,28 +232,30 @@
         </div>
     </footer>
 
-  <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
-    data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
-    data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-    </script>
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
+        data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
+        </script>
 
-  <script src="../js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
 
-  <script src="../js/popper.min.js"></script>
+    <script src="../js/popper.min.js"></script>
 
-  <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
-  <script src="../js/pw.bundle.js"></script>
+    <script src="../js/pw.bundle.js"></script>
 
-  <script src="../js/default-assets/active.js"></script>
+    <script src="../js/default-assets/active.js"></script>
 
-  <script src="../js/swiper-bundle.min.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="../js/glightbox.min.js"></script>
+    <script src="../js/glightbox.min.js"></script>
 
-  <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="../js/isotope.pkgd.min.js"></script>
 
-  <script src="../js/portfolio-comp.js"></script>
+    <script src="../js/portfolio-comp.js"></script>
+
+    <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
